@startuml

class com.frauas.exercisegenerator.documents.Author {
	{field} +createdAt : java.time.LocalDateTime
	{field} +id : String
	{field} +name : String
	{field} +updatedAt : java.time.LocalDateTime
	{method}  {static} +builder () : com.frauas.exercisegenerator.documents.Author$AuthorBuilder
	{method} #canEqual ( paramObject1 : Object ) : boolean
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class com.frauas.exercisegenerator.documents.Author$AuthorBuilder {
	{field} -createdAt : java.time.LocalDateTime
	{field} -id : String
	{field} -name : String
	{field} -updatedAt : java.time.LocalDateTime
	{method} +build () : com.frauas.exercisegenerator.documents.Author
	{method} +createdAt ( paramLocalDateTime1 : java.time.LocalDateTime ) : com.frauas.exercisegenerator.documents.Author$AuthorBuilder
	{method} +id ( paramString1 : String ) : com.frauas.exercisegenerator.documents.Author$AuthorBuilder
	{method} +name ( paramString1 : String ) : com.frauas.exercisegenerator.documents.Author$AuthorBuilder
	{method} +toString () : String
	{method} +updatedAt ( paramLocalDateTime1 : java.time.LocalDateTime ) : com.frauas.exercisegenerator.documents.Author$AuthorBuilder
}


class com.frauas.exercisegenerator.documents.Category {
	{field} +id : String
	{field} +name : String
	{method} #canEqual ( paramObject1 : Object ) : boolean
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class com.frauas.exercisegenerator.documents.Exercise {
	{field} +categories : java.util.ArrayList
	{field} +createdAt : java.time.LocalDateTime
	{field} +id : String
	{field} +subExercises : java.util.ArrayList
	{field} +updatedAt : java.time.LocalDateTime
	{method} #canEqual ( paramObject1 : Object ) : boolean
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class com.frauas.exercisegenerator.documents.ImageSolution {
	{field} -type : com.frauas.exercisegenerator.enums.SolutionType
	{field} +url : String
	{method} #canEqual ( paramObject1 : Object ) : boolean
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class com.frauas.exercisegenerator.documents.Sheet {
	{field} +categories : java.util.ArrayList
	{field} +createdAt : java.time.LocalDateTime
	{field} +exercises : java.util.ArrayList
	{field} +id : String
	{field} +updatedAt : java.time.LocalDateTime
	{method} #canEqual ( paramObject1 : Object ) : boolean
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


abstract class com.frauas.exercisegenerator.documents.Solution {
}


class com.frauas.exercisegenerator.documents.SubExercise {
	{field} +images : java.util.ArrayList
	{field} +shortText : String
	{field} +solutions : java.util.ArrayList
	{field} +text : String
	{field} +title : String
	{method} #canEqual ( paramObject1 : Object ) : boolean
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class com.frauas.exercisegenerator.documents.TextSolution {
	{field} +text : String
	{field} -type : com.frauas.exercisegenerator.enums.SolutionType
	{method} #canEqual ( paramObject1 : Object ) : boolean
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class com.frauas.exercisegenerator.documents.User {
	{field} +id : String
	{field} +password : String
	{field} +userName : String
	{method}  {static} +builder () : com.frauas.exercisegenerator.documents.User$UserBuilder
	{method} #canEqual ( paramObject1 : Object ) : boolean
	{method} +equals ( paramObject1 : Object ) : boolean
	{method} +hashCode () : int
	{method} +toString () : String
}


class com.frauas.exercisegenerator.documents.User$UserBuilder {
	{field} -id : String
	{field} -password : String
	{field} -userName : String
	{method} +build () : com.frauas.exercisegenerator.documents.User
	{method} +id ( paramString1 : String ) : com.frauas.exercisegenerator.documents.User$UserBuilder
	{method} +password ( paramString1 : String ) : com.frauas.exercisegenerator.documents.User$UserBuilder
	{method} +toString () : String
	{method} +userName ( paramString1 : String ) : com.frauas.exercisegenerator.documents.User$UserBuilder
}




com.frauas.exercisegenerator.documents.Exercise -->  com.frauas.exercisegenerator.documents.Author : author
com.frauas.exercisegenerator.documents.Exercise --|>  com.frauas.exercisegenerator.documents.SubExercise
com.frauas.exercisegenerator.documents.ImageSolution --|>  com.frauas.exercisegenerator.documents.Solution
com.frauas.exercisegenerator.documents.Sheet -->  com.frauas.exercisegenerator.documents.Author : author
com.frauas.exercisegenerator.documents.TextSolution --|>  com.frauas.exercisegenerator.documents.Solution


@enduml